--- a/06 - Notification Content Extensions/NagMe/NagMeContentExtension/Info.plist
+++ b/06 - Notification Content Extensions/NagMe/NagMeContentExtension/Info.plist
@@ -28,6 +28,8 @@
 			<string>reminder</string>
 			<key>UNNotificationExtensionInitialContentSizeRatio</key>
 			<real>1</real>
+			<key>UNNotificationExtensionDefaultContentHidden</key>
+			<true/>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
