Add RideSharing Intents to Info.plist
This simply declares which intents we will support. Implementation will
follow shortly.

--- a/09 - Siri Intents/Bike Taxi/BikeTaxiIntent/Info.plist
+++ b/09 - Siri Intents/Bike Taxi/BikeTaxiIntent/Info.plist
@@ -28,6 +28,7 @@
 			<array/>
 			<key>IntentsSupported</key>
 			<array>
+				<string>INRequestRideIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
